--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,18 @@
-fastapi
-uvicorn
-pydantic
-requests
 torch
 transformers
+sentence-transformers
+chromadb
+fastapi
+uvicorn
+pyngrok
+pytesseract
+Pillow
+spacy
+datasets
+trl
 bitsandbytes
+python-telegram-bot
+python-dotenv
+requests
+nest-asyncio
+huggingface-hub
